# DSaA-ejudje

./: .clang-format  .gitignore  CMakeLists.txt
AaDS-ejudge/: main.py  module.py  parse_find_numbers_in_line.py  tests.py
cmake/: HunterGate.cmake
ejudje/: ejudje.sln
ejudje/ejudje/: ejudje.cpp
module_1/: main.cpp
module_1/B/: answer.txt  input.txt  main.py  module.py
module_1/C/: input.txt  main.py  module.py  output.txt
module_1/D/: module.py  output.txt
module_2/B/: m2_taskB.cpp  m2_taskB.hpp  m2_taskB.py  m2_taskB_2.py  misc.py  test.py
module_2/B/tests/: tests.cpp
module_2/C/: m2_taskC.cpp  m2_taskC.py
module_2/D/: m2_taskD.cpp
module_2/examples/: B.py  C.cpp  C.py  D.cpp
module_3/A/: A.txt  m3_taskA.cpp  m3_taskA.py
module_3/B/: 3m_taskB.py
module_3/D/: m3_taskD.py  prime.py  test.py
module_3/D/tests/: new-client-15.txt  new-client-19.txt  new-client-5.txt  new-client-7.txt  new-client.txt
module_3/exmpl/: 003490.cpp  003640.cpp  mr_Bloom.cpp
module_3/tests/: new-client-3.txt
